# bict_zephyr

./: README.md
app/: CMakeLists.txt  prj.conf
app/boards/arm/awaresite_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  awaresite_nrf52840.dts  awaresite_nrf52840.yaml  awaresite_nrf52840_defconfig  board.cmake
app/src/: main.c
docker/: Dockerfile
